Final Fix for countdown timer not visible in deployment.

--- a/css/style.css
+++ b/css/style.css
@@ -529,7 +529,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #intro {
   width: 100vw;
-  /* background-color: rgba(2, 13, 7, 0.8); */
   padding: 0;
   margin: 0;
   z-index: 99;
@@ -612,7 +611,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   border-radius: 3.125rem;
   transition: 0.5s;
   line-height: 1;
-  margin: 0.625rem;
+  /* margin: 0.625rem; */
   color: #fefefe;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
@@ -733,7 +732,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
-  overflow: hidden;
+  /* overflow: hidden; */
   position: relative;
   padding: 3.75rem 0 2.5rem 0;
   /* margin-top: 3.75rem; */
@@ -1429,7 +1428,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 
   #about {
-    background-attachment: fixed;
+    background-attachment: scroll;
   }
 }
 
@@ -1467,7 +1466,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   #intro .intro-wrapper {
     flex-direction: column;
     gap: 3.125rem;
-    margin-top: -1rem;
+    margin-top: -2rem;
     background-color: rgba(2, 13, 7, 0.8);
   }
 
@@ -1490,24 +1489,30 @@ body.mobile-nav-active #mobile-nav-toggle {
     padding: 0;
   }
 
-  #intro h1 {
+  #intro .intro-container h1 {
     font-size: 2.125rem;
+    margin-bottom: 2rem;
   }
 
-  #intro p {
+  #intro .intro-container p {
     font-size: 1rem;
+    margin-bottom: 10rem;
   }
+  
+  /* #intro .intro-container .register-btn {
+    margin: 2rem auto;
+  } */
 
   #intro .intro-wrapper .timer-wrapper {
     flex: 0 1 auto;
-    margin: 2rem auto;
+    margin: 1rem auto;
     width: 80%;
     height: 75%;
   }
 
   #about {
     padding: 1rem auto;
-    margin-top: 15rem;
+    margin-top: 0;
   }
 
   #about h3 {
@@ -1571,5 +1576,41 @@ body.mobile-nav-active #mobile-nav-toggle {
 @media (max-width: 480px) {
   #schedule .nav-tabs a {
     padding: 0.5rem 1.875rem;
+  }
+
+  #intro .intro-wrapper {
+    margin-top: -1rem;
+    padding-bottom: 10rem;
+  }
+
+  #intro .intro-wrapper .intro-container {
+    margin-top: -1rem;
+  }
+
+  #intro .intro-wrapper .intro-container .register-btn{
+    margin-top: -1rem;
+  }
+
+  #about {
+    margin-top: -3.5rem;
+  }
+
+}
+
+@media (max-width: 400px) {
+  #about {
+    margin-top: 3rem;
+  }
+}
+
+@media (max-width: 376px) {
+
+  #intro .intro-wrapper .timer-wrapper .timer {
+    width: 100%;
+    height: 80%;
+  }
+
+  #about {
+    margin-top: 10rem;
   }
 }
